@@ -1,7 +1,9 @@
 package com.be.gitfolio.resume.service;
 
+import com.be.gitfolio.common.client.MemberGrpcClient;
 import com.be.gitfolio.common.exception.BaseException;
 import com.be.gitfolio.common.exception.ErrorCode;
+import com.be.gitfolio.common.grpc.MemberServiceProto;
 import com.be.gitfolio.resume.domain.Comment;
 import com.be.gitfolio.resume.dto.ResumeRequestDTO;
 import com.be.gitfolio.resume.dto.ResumeResponseDTO;
@@ -24,7 +26,7 @@ import static com.be.gitfolio.resume.dto.ResumeResponseDTO.*;
 public class CommentService {
 
     private final CommentRepository commentRepository;
-
+    private final MemberGrpcClient memberGrpcClient;
 
     /**
      * 댓글 작성
@@ -76,7 +78,10 @@ public class CommentService {
     public List<CommentResponseDTO> getCommentList(String resumeId) {
         List<Comment> comments = commentRepository.findAllByResumeId(resumeId);
         return comments.stream()
-                .map(CommentResponseDTO::new)
-                .collect(Collectors.toList());
+                .map(comment -> {
+                    MemberServiceProto.MemberResponseById memberResponse = memberGrpcClient.getMember(String.valueOf(comment.getMemberId()));
+                    return new CommentResponseDTO(comment, memberResponse.getNickname(), memberResponse.getAvatarUrl());
+                })
+                .toList();
     }
 }
